[package]
name = "uniswap-sdk-core"
version = "3.7.1"
edition = "2021"
authors = ["malik <aremumalik05@gmail.com>", "Shuhui Luo <twitter.com/aureliano_law>"]
description = "The Uniswap SDK Core in Rust provides essential functionality for interacting with the Uniswap decentralized exchange"
license = "MIT"
readme = "README.md"
repository = "https://github.com/malik672/uniswap-sdk-core-rust"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["sdk-core", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[dependencies]
alloy-primitives = { version = "1.0", default-features = false, features = ["map-fxhash"] }
bigdecimal = { version = "0.4.7", default-features = false }
derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
eth_checksum = { version = "0.1.2", optional = true }
lazy_static = "1.5"
num-bigint = { version = "0.4", default-features = false }
num-integer = { version = "0.1", default-features = false }
regex = { version = "1.11", optional = true }
thiserror = { version = "2", default-features = false }

[features]
default = []
std = [
    "alloy-primitives/std",
    "bigdecimal/std",
    "derive_more/std",
    "thiserror/std"
]
validate_parse_address = [
    "eth_checksum",
    "regex"
]
