[package]
name = "uniswap-sdk-core"
version = "5.4.0"
edition = "2024"
rust-version = "1.88"
authors = ["malik <aremumalik05@gmail.com>", "Shuhui Luo <twitter.com/aureliano_law>"]
description = "The Uniswap SDK Core in Rust provides essential functionality for interacting with the Uniswap decentralized exchange"
license = "MIT"
readme = "README.md"
repository = "https://github.com/malik672/uniswap-sdk-core-rust"
categories = ["cryptography::cryptocurrencies", "finance", "no-std"]
keywords = ["sdk-core", "ethereum", "sdk"]
exclude = [".github", ".gitignore", "rustfmt.toml"]

[dependencies]
alloy-primitives = { version = "1.3", default-features = false, features = ["map-fxhash"] }
derive_more = { version = "2", default-features = false, features = ["deref", "from"] }
eth_checksum = { version = "0.1.2", optional = true }
fastnum = { version = "0.7.4", default-features = false, features = ["numtraits"] }
lazy_static = "1.5"
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
regex = { version = "1.11", optional = true }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
proptest = "1"

[features]
default = []
std = [
    "alloy-primitives/std",
    "derive_more/std",
    "fastnum/std",
    "num-integer/std",
    "thiserror/std"
]
validate_parse_address = [
    "eth_checksum",
    "regex"
]
